// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend Settings Email Container when delivery method is sendmail renders correctly 1`] = `
<section>
  <header
    className="backend-header"
  >
    <div
      className="backend-header__inner"
    >
      <h1
        className="backend-header__title backend-header__title--large"
      >
        Email Settings
      </h1>
    </div>
  </header>
  <div
    className="backend-panel"
  >
    <div
      className="container"
    >
      <div
        className="panel"
      >
        <div>
          <form
            className="form-secondary"
            data-id="submit"
            onSubmit={[Function]}
          >
            <div
              className="form-section"
            >
              <header
                className="form-section-label"
              >
                <span>
                  Message Settings
                </span>
              </header>
              <div
                className="form-input-group"
              >
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][fromAddress]-text-input-1"
                  >
                    Email from address
                  </label>
                  <input
                    aria-describedby="attributes[email][fromAddress]-text-input-1"
                    id="attributes[email][fromAddress]-text-input-1"
                    onChange={[Function]}
                    placeholder="do-not-reply@manifoldapp.org"
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    All emails sent by manifold will be from this address.
                  </span>
                </div>
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][fromName]-text-input-1"
                  >
                    Email from name
                  </label>
                  <input
                    aria-describedby="attributes[email][fromName]-text-input-1"
                    id="attributes[email][fromName]-text-input-1"
                    onChange={[Function]}
                    placeholder="Manifold Scholarship"
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    All emails sent by manifold will appear to be sent by this name.
                  </span>
                </div>
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][replyToAddress]-text-input-1"
                  >
                    Email reply-to address
                  </label>
                  <input
                    aria-describedby="attributes[email][replyToAddress]-text-input-1"
                    id="attributes[email][replyToAddress]-text-input-1"
                    onChange={[Function]}
                    placeholder="do-not-reply@manifoldapp.org"
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    Replies to emails sent by Manifold will go to this address.
                  </span>
                </div>
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][replyToName]-text-input-1"
                  >
                    Email reply-to name
                  </label>
                  <input
                    aria-describedby="attributes[email][replyToName]-text-input-1"
                    id="attributes[email][replyToName]-text-input-1"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    Replies to emails sent by Manifold will appear to be sent by this name.
                  </span>
                </div>
                <div
                  className="form-input"
                >
                  <div
                    className="form-input"
                    style={Object {}}
                  >
                    <label
                      className="has-instructions"
                      htmlFor="textarea-1"
                    >
                      Email closing
                    </label>
                    <span
                      className="instructions"
                    >
                      How do you want to close emails sent by Manifold?
                    </span>
                    <textarea
                      aria-describedby="textarea-error-1"
                      id="textarea-1"
                      onChange={[Function]}
                      placeholder="Sincerely,
The Manifold Team"
                      style={
                        Object {
                          "height": 100,
                        }
                      }
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="form-section"
            >
              <header
                className="form-section-label"
              >
                <span>
                  Email Delivery Method
                </span>
              </header>
              <div
                className="form-input-group"
              >
                <div
                  className="form-input"
                >
                  <div
                    className="form-input"
                    style={Object {}}
                  >
                    <label>
                      Email Delivery Method
                    </label>
                    <div
                      className="form-select"
                    >
                      <svg
                        aria-hidden={true}
                        className="manicon-svg form-select__icon svg-icon--disclosureDown16"
                        fill="currentColor"
                        height={20}
                        viewBox="0 0 16 16"
                        width={20}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <polygon
                          points="8 9.702 13.356 5 13.999 5.733 8 10.999 2 5.733 2.643 5"
                        />
                      </svg>
                      <select
                        aria-describedby="select-error-1"
                        onChange={[Function]}
                        value=""
                      >
                        <option
                          value=""
                        >
                          
                        </option>
                        <option
                          value="smtp"
                        >
                          SMTP
                        </option>
                        <option
                          value="sendmail"
                        >
                          Sendmail
                        </option>
                      </select>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="form-section"
            >
              <header
                className="form-section-label"
              >
                <span>
                  Sendmail Configuration
                </span>
              </header>
              <div
                className="form-input-group"
              >
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][sendmailSettingsLocation]-text-input-1"
                  >
                    Sendmail Location
                  </label>
                  <input
                    aria-describedby="attributes[email][sendmailSettingsLocation]-text-input-1"
                    id="attributes[email][sendmailSettingsLocation]-text-input-1"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    The location of the sendmail executable. Defaults to /usr/sbin/sendmail.
                  </span>
                </div>
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][sendmailSettingsArguments]-text-input-1"
                  >
                    Sendmail Arguments
                  </label>
                  <input
                    aria-describedby="attributes[email][sendmailSettingsArguments]-text-input-1"
                    id="attributes[email][sendmailSettingsArguments]-text-input-1"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    The command line arguments. Defaults to -i with -f sender@address added automatically before the message is sent.
                  </span>
                </div>
              </div>
            </div>
            <div
              className="form-input submit wide"
            >
              <input
                className="button-secondary button-secondary--outlined"
                type="submit"
                value="Save Settings"
              />
            </div>
            <div>
              <button
                className="button-secondary button-secondary--dark button-secondary--with-room"
                onClick={[Function]}
              >
                Send test email
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Backend Settings Email Container when delivery method is smtp renders correctly 1`] = `
<section>
  <header
    className="backend-header"
  >
    <div
      className="backend-header__inner"
    >
      <h1
        className="backend-header__title backend-header__title--large"
      >
        Email Settings
      </h1>
    </div>
  </header>
  <div
    className="backend-panel"
  >
    <div
      className="container"
    >
      <div
        className="panel"
      >
        <div>
          <form
            className="form-secondary"
            data-id="submit"
            onSubmit={[Function]}
          >
            <div
              className="form-section"
            >
              <header
                className="form-section-label"
              >
                <span>
                  Message Settings
                </span>
              </header>
              <div
                className="form-input-group"
              >
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][fromAddress]-text-input-1"
                  >
                    Email from address
                  </label>
                  <input
                    aria-describedby="attributes[email][fromAddress]-text-input-1"
                    id="attributes[email][fromAddress]-text-input-1"
                    onChange={[Function]}
                    placeholder="do-not-reply@manifoldapp.org"
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    All emails sent by manifold will be from this address.
                  </span>
                </div>
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][fromName]-text-input-1"
                  >
                    Email from name
                  </label>
                  <input
                    aria-describedby="attributes[email][fromName]-text-input-1"
                    id="attributes[email][fromName]-text-input-1"
                    onChange={[Function]}
                    placeholder="Manifold Scholarship"
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    All emails sent by manifold will appear to be sent by this name.
                  </span>
                </div>
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][replyToAddress]-text-input-1"
                  >
                    Email reply-to address
                  </label>
                  <input
                    aria-describedby="attributes[email][replyToAddress]-text-input-1"
                    id="attributes[email][replyToAddress]-text-input-1"
                    onChange={[Function]}
                    placeholder="do-not-reply@manifoldapp.org"
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    Replies to emails sent by Manifold will go to this address.
                  </span>
                </div>
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][replyToName]-text-input-1"
                  >
                    Email reply-to name
                  </label>
                  <input
                    aria-describedby="attributes[email][replyToName]-text-input-1"
                    id="attributes[email][replyToName]-text-input-1"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    Replies to emails sent by Manifold will appear to be sent by this name.
                  </span>
                </div>
                <div
                  className="form-input"
                >
                  <div
                    className="form-input"
                    style={Object {}}
                  >
                    <label
                      className="has-instructions"
                      htmlFor="textarea-1"
                    >
                      Email closing
                    </label>
                    <span
                      className="instructions"
                    >
                      How do you want to close emails sent by Manifold?
                    </span>
                    <textarea
                      aria-describedby="textarea-error-1"
                      id="textarea-1"
                      onChange={[Function]}
                      placeholder="Sincerely,
The Manifold Team"
                      style={
                        Object {
                          "height": 100,
                        }
                      }
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="form-section"
            >
              <header
                className="form-section-label"
              >
                <span>
                  Email Delivery Method
                </span>
              </header>
              <div
                className="form-input-group"
              >
                <div
                  className="form-input"
                >
                  <div
                    className="form-input"
                    style={Object {}}
                  >
                    <label>
                      Email Delivery Method
                    </label>
                    <div
                      className="form-select"
                    >
                      <svg
                        aria-hidden={true}
                        className="manicon-svg form-select__icon svg-icon--disclosureDown16"
                        fill="currentColor"
                        height={20}
                        viewBox="0 0 16 16"
                        width={20}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <polygon
                          points="8 9.702 13.356 5 13.999 5.733 8 10.999 2 5.733 2.643 5"
                        />
                      </svg>
                      <select
                        aria-describedby="select-error-1"
                        onChange={[Function]}
                        value=""
                      >
                        <option
                          value=""
                        >
                          
                        </option>
                        <option
                          value="smtp"
                        >
                          SMTP
                        </option>
                        <option
                          value="sendmail"
                        >
                          Sendmail
                        </option>
                      </select>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="form-section"
            >
              <header
                className="form-section-label"
              >
                <span>
                  SMTP Configuration
                </span>
              </header>
              <div
                className="form-input-group"
              >
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][smtpSettingsAddress]-text-input-1"
                  >
                    SMTP Address
                  </label>
                  <input
                    aria-describedby="attributes[email][smtpSettingsAddress]-text-input-1"
                    id="attributes[email][smtpSettingsAddress]-text-input-1"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    Allows you to use a remote mail server.
                  </span>
                </div>
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][smtpSettingsPort]-text-input-1"
                  >
                    SMTP Port
                  </label>
                  <input
                    aria-describedby="attributes[email][smtpSettingsPort]-text-input-1"
                    id="attributes[email][smtpSettingsPort]-text-input-1"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    On the off chance that your mail server doesn't run on port 25, you can change it.
                  </span>
                </div>
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[email][smtpSettingsUserName]-text-input-1"
                  >
                    SMTP Username
                  </label>
                  <input
                    aria-describedby="attributes[email][smtpSettingsUserName]-text-input-1"
                    id="attributes[email][smtpSettingsUserName]-text-input-1"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    If your mail server requires authentication, set the username in this setting.
                  </span>
                </div>
                <div
                  className="form-input"
                  style={Object {}}
                >
                  <label
                    className="has-instructions"
                    htmlFor="attributes[secrets][smtpSettingsPassword]-text-input-1"
                  >
                    SMTP Password
                  </label>
                  <input
                    aria-describedby="attributes[secrets][smtpSettingsPassword]-text-input-1"
                    id="attributes[secrets][smtpSettingsPassword]-text-input-1"
                    onChange={[Function]}
                    type="password"
                    value=""
                  />
                  <span
                    className="instructions"
                  >
                    If your mail server requires authentication, set the password in this setting.
                  </span>
                </div>
              </div>
            </div>
            <div
              className="form-input submit wide"
            >
              <input
                className="button-secondary button-secondary--outlined"
                type="submit"
                value="Save Settings"
              />
            </div>
            <div>
              <button
                className="button-secondary button-secondary--dark button-secondary--with-room"
                onClick={[Function]}
              >
                Send test email
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</section>
`;
